<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="manager_commit">创建</string>
    <string name="manager_update">更新</string>
    <string name="mode_button">地图选点（坐标）</string>
    <string name="main_navi">导航</string>
    <string name="main_Carservice">服务</string>
    <string name="main_more">更多</string>
    <string name="main_order">预定</string>
    <string name="main_mine">我的</string>
    <string name="app_name">有车位</string>
    <string name="key_search">\t请输入查询内容…</string>
    <string name="path_planning">路径规划</string>
    <string name="start_navigation">开始导航</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="no_yun_result">此处无更多停车场位置~</string>
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string name="happy_driver_life">乐享车生活</string>
    <string name="gas_station">加油站</string>
    <string name="car_rent">租车</string>
    <string name="car_repair">维修</string>
    <string name="car_wash">洗车</string>
    <string name="title_activity_driver_navi">DriverNaviActivity</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">有车位</string>
    <string name="preference_default_tts_role">xiaoyan</string>
    <string name="preference_key_tts_speed">tts_speed</string>
    <string name="preference_key_tts_volume">tts_volume</string>
    <string name="preference_key_tts_pitch">tts_pitch</string>
    <string name="preference_key_tts_stream">3</string>
    <string name="title_activity_navi_start">NaviStartActivity</string>
    <string name="title_activity_manager_main">Manager_main</string>
    <string name="welcome">欢迎</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="spinner_chose_tip">请选择：</string>
    <string name="driver_info_welcome">亲，停哪儿？</string>
    <string name="driver_phone">联系电话：</string>
    <string name="driver_phone_null">暂无联系电话</string>
    <string name="driver_licence">车牌号：</string>
    <string name="driver_another_licence">其他车牌号：</string>
    <string name="driver_add_another_licence">添加车牌</string>
    <string name="driver_hint_old_pwd">请输入旧密码</string>
    <string name="driver_hint_new_pwd">请输入新密码</string>
    <string name="driver_sure_update_info">修改</string>
    <string name="driver_check_order">查看订单</string>
    <string name="driver_order_check_address">定位</string>
    <string name="driver_order_call_manager">拨号</string>
    <string name="driver_back_map">返回地图</string>
    <string name="driver_logout">退出登录</string>
    <string name="driver_order_information">我的订单</string>
    <string name="driver_order_admin_phone">管理员电话：</string>
    <string name="driver_update_information">修改密码</string>
    <string name="driver_update_licence">新车牌号</string>
    <string name="driver_update_phone">联系电话</string>
    <string name="driver_update_password">修改密码</string>
    <string name="driver_update_password_old">旧密码：</string>
    <string name="driver_update_password_new">新密码：</string>
    <string name="admin_order_show_driverPhone">驾驶员电话</string>
    <string name="admin_order_show_detail">预定详情</string>
    
    <string name="parking_order_title">车位预定</string>
    <string name="parking_order_make">车位订单</string>
    <string name="parking_order_chose_number">预定车位数：</string>
    <string name="parking_order_chose_time">选择预定时间</string>
    <string name="parking_order_submit">提交预定</string>
    <string name="parking_order_cancel">取消预定</string>
    <string name="parking_detail_info">车位详情</string>
    <string name="parking_detail_book_number">停车场车位数量：</string>
    <string name="parking_detail_current_number">剩余车位数量：</string>
    <string name="parking_detail_book_money">预定收费</string>    
    <string name="parking_detail_book_money_label">预定收费：</string>    
    <string name="parking_detail_stop_money">停车收费</string>    
    <string name="parking_detail_book_submit">预定</string>
    <string name="parking_detail_book_back">返回</string>
    <string name="parking_info_address">停车场的地址：</string>
    <string name="parking_info_distance">距目的地的距离：</string>
    <string name="parking_info_phnoe">\t\t\t\t停车场电话：</string>
    <string name="username_manager_hint">请输入用户名</string>
    <string name="username_driver_hint">请输入车牌号</string>
    <string name="username_input">账号</string>
    <string name="password_hint">请输入密码</string>
    <string name="password_input">密码</string>
    <string name="opt_remember">记住密码</string>
    <string name="login">登录</string>
    <string name="zhuce">注册</string>

    <string name="main_home">预定订单</string>
	<string name="main_finished">已完成订单</string>
    <string name="main_news">发布消息</string>
    <string name="main_manage_date">个人设置</string>
    <string name="title_activity_my_spinner">MySpinner</string>
    <string name="title_activity_map_for_address">MapForAddress</string>
    <string name="tip_no_orders">暂无订单信息</string>
    <string name="label_username">用户名</string>
    <string name="label_password">密码</string>
    <string name="label_repassword">确认密码</string>
    <string name="label_newPassword">新密码</string>
    <string name="label_oldPassword">旧密码</string>
    <string name="register_button_reset">重置</string>
    <string name="register_button_submit">注册</string>
    <string name="register_hint_licence">请输入新的车牌号</string>
    <string name="register_hint_username">请注册6到16位的用户名</string>
    <string name="register_hint_password">请输入6到12位的密码</string>
    <string name="register_hint_repassword">请确认输入的密码</string>
    <string name="title_register_driver">驾驶员注册</string> 
    <string name="title_register_manager">停车场管理员注册</string>
    <string name="login_radiobutton_driver">驾驶员</string>
    <string name="login_radiobutton_manager">停车场</string>
    <string name="label_button_change_licence">更换</string>
    <string name="label_button_add_phone">添加</string>
    <string name="label_edittext_hint_phone">请输入手机号码</string>
    <string name="label_edittext_hint_password3">请确认新密码</string>
    <string name="label_edittext_hint_cars">请输入预定的车位数</string>
    <string name="label_title_parking_baic">基本信息</string>
    <string name="menu_title_refresh">刷新</string>
    
    <string name="label_text_licence">车牌</string>
    <string name="label_text_time">时间</string>
    <string name="label_text_number">数量</string>
    <string name="label_text_money">金额</string>
    <string name="label_button_finish">完成</string>
    <string name="label_manager_parkingName">停车场名称：</string>
    <string name="label_manager_parkingPhone">停车场电话：</string>
    <string name="label_manager_parkingAll">预定车位总数(个):</string>
    <string name="label_manager_parkingPrice">预定车位价格(元)：</string>
    <string name="label_manager_priceTen">20分钟</string>
    <string name="label_manager_priceTwn">40分钟</string>
    <string name="label_manager_priceThy">60分钟</string>
    <string name="label_manager_priceMoney">停车价格(元):</string>
    <string name="label_manager_priceHalf">半个小时内:</string>
    <string name="label_manager_priceHour">一个小时内:</string>
    <string name="label_manager_priceMore">一个小时以上:</string>

</resources>
