<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/label_oldPassword"
        android:layout_marginLeft="5dp"
        android:textStyle="bold"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_admin_oldPassword"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/edit_login"
        android:hint="@string/driver_hint_old_pwd"
        android:ems="12"
        android:inputType="textPassword" >

    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_newPassword"
        android:layout_marginLeft="5dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_admin_newPassword"
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/edit_login"
        android:ems="12"
        android:hint="@string/driver_hint_new_pwd"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_repassword"
        android:layout_marginLeft="5dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_admin_repassword"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/edit_login"
        android:ems="12"
        android:hint="@string/label_edittext_hint_password3"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_update_admin_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:textColor="#00C5CD"
        android:textStyle="bold"
        android:background="@drawable/manager_info_button_selector"
        android:text="@string/driver_sure_update_info" />

</LinearLayout>