<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/driver_layout_stroke"
    android:orientation="vertical" >

    <!-- 修改密码 -->
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/driver_update_password"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:stretchColumns="1" >

        <!-- 第一排 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             >

            <!-- 旧密码 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_oldPassword"
                android:layout_gravity="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_input_old_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_login"
                android:hint="@string/driver_hint_old_pwd"
                android:inputType="textPassword" />
        </TableRow>
        
        <!-- 第二排 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <!-- 新密码 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_newPassword"
                android:layout_gravity="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_input_new_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_login"
                android:hint="@string/driver_hint_new_pwd"
                android:inputType="textPassword" />
        </TableRow>
        
        <!-- 第三排 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <!-- 确认密码 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_repassword"
                android:layout_gravity="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_input_re_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_login"
                android:hint="@string/label_edittext_hint_password3"
                android:inputType="textPassword" />
        </TableRow>
    </TableLayout>

    <!-- 修改按钮 -->
    <Button
        android:id="@+id/button_update_info"
        android:layout_marginTop="30dp"
        android:text="@string/driver_sure_update_info"
        style="@style/driver_button_style" />

</LinearLayout>