<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <!-- 用户名 -->
    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        style="?android:listSeparatorTextViewStyle"
        android:text="@string/label_username"/>
    
	<EditText 
	    android:id="@+id/edit_register_username"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="16dp"
	    android:layout_marginRight="16dp"
	    android:layout_marginTop="5dp"
	    android:background="@drawable/edit_login"
	    android:singleLine="true" />
	
	<!-- 密码 -->
	<TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        style="?android:listSeparatorTextViewStyle"
        android:text="@string/label_password"/>
	
	<EditText 
	    android:id="@+id/edit_register_password"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="textPassword"
	    android:singleLine="true"
	    android:layout_marginTop="5dp"
	    android:layout_marginLeft="16dp"
	    android:layout_marginRight="16dp"
	    android:background="@drawable/edit_login"
	    android:hint="@string/register_hint_password"
	    />
	
	<!-- 确认密码 -->
	<TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        style="?android:listSeparatorTextViewStyle"
        android:text="@string/label_repassword"/>
	
	<EditText 
	    android:id="@+id/edit_register_repassword"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
		android:inputType="textPassword"
	    android:hint="@string/register_hint_repassword"
	    android:background="@drawable/edit_login"
	    android:layout_marginTop="5dp"
	    android:layout_marginLeft="16dp"
	    android:layout_marginRight="16dp"/>
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_marginLeft="16dp"
	    android:layout_marginRight="16dp"
	    android:background="@drawable/button_bar_stroke"
	    style="?android:attr/buttonBarStyle"
	    android:layout_marginTop="20dp" >
	    
	    <!-- 重置按钮 -->
	    <Button 
	        android:id="@+id/button_register_reset"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:textSize="20sp"
	        android:textColor="#00CED1"
	        android:textStyle="bold"
	        style="?android:attr/buttonBarButtonStyle"
	        android:text="@string/register_button_reset"/>
	    
	    <!-- 注册按钮 -->
	    <Button 
	        android:id="@+id/button_register_submit"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:textSize="20sp"
	        android:textColor="#00CED1"
	        android:textStyle="bold"
	        style="?android:attr/buttonBarButtonStyle"
	        android:text="@string/register_button_submit" />
	    
	</LinearLayout>
</LinearLayout>