<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <!-- 顶部标题 -->
	<RelativeLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="#00C5CD" >
	    
	    <!-- 返回箭头 -->
	    <ImageButton
	        android:id="@+id/image_login_backToMap"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:background="#00C5CD"
	        android:layout_marginLeft="6dp"
	        android:src="@drawable/back_to_map" />
	    
	    <!-- 中间标题“我的” -->
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/main_mine"
	        android:textSize="30sp"
			android:layout_centerInParent="true"
	        android:textColor="#ffffff" />
	    
	    <!-- 最右边的注册按钮 -->
	    <Button android:id="@+id/button_loginUser_register"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"
	        android:textSize="20sp"
	        android:layout_marginRight="10dp"
	        android:background="@drawable/user_button_register_selector"
	        android:text="@string/zhuce"/>
	    
	</RelativeLayout>
	
	<!-- RadioButton让用户选择是停车场还是驾驶员 -->
	<RadioGroup android:id="@+id/user_login_radioGroup"
	    android:layout_width="match_parent"
	    android:orientation="horizontal"
	    android:layout_marginTop="10dp"
	    android:layout_marginLeft="50dp"
	    android:layout_marginRight="50dp"
	    android:gravity="center"
	    android:layout_height="wrap_content">
	    
	    <!-- 默认选择驾驶员 -->
	    <RadioButton android:id="@+id/radioBtn_user_driver"
	        android:checked="true"
	        style="@style/user_login_radioButton_style"
	        android:text="@string/login_radiobutton_driver" />
	    
	    <!-- 停车场 -->
	    <RadioButton android:id="@+id/radioBtn_user_manager"
	        style="@style/user_login_radioButton_style"
	        android:text="@string/login_radiobutton_manager" />
	    
	</RadioGroup>
    
	<RelativeLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp">
	    
	    <!-- 账号文字 -->
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:id="@+id/label_username_left"
	        android:layout_centerVertical="true"
	        android:textSize="20sp"
	        android:layout_marginLeft="12dp"
	        android:text="@string/username_input"/>
	    
	    <!-- 账号输入框 -->
	    <EditText android:id="@+id/edit_login_username"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/edit_login"
	        android:hint="@string/username_driver_hint"
	        android:singleLine="true"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="12dp"
	        android:layout_toRightOf="@id/label_username_left" />
	    
	</RelativeLayout>
	
	<RelativeLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp">
	    
	    <!-- 密码文字 -->
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:id="@+id/label_password_left"
	        android:layout_centerVertical="true"
	        android:textSize="20sp"
	        android:layout_marginLeft="12dp"
	        android:text="@string/password_input"/>
	    
	    <!-- 密码输入框 -->
	    <EditText android:id="@+id/edit_login_password"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/edit_login"
	        android:hint="@string/password_hint"
	        android:inputType="textPassword"
	        android:singleLine="true"
	        android:layout_marginRight="12dp"
	        android:layout_marginLeft="5dp"
	        android:layout_toRightOf="@id/label_password_left" />
	    
	</RelativeLayout>
	
	<!-- 登录按钮 -->
	<Button android:id="@+id/button_loginUser_manager"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/login"
	    android:layout_marginTop="20dp"
	    android:layout_marginLeft="16dp"
	    android:layout_marginRight="16dp"
	    android:textColor="#ffffff"
	    android:textSize="20sp"
	    android:textStyle="bold"
	    android:background="@drawable/driver_button_selector" />
	    
</LinearLayout>