<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- 用户名信息 -->
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/label_username" />

    <TextView
        android:id="@+id/text_manager_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_update_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="#FF6347"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/driver_update_password"
        android:background="@drawable/button" />

    <Button
        android:id="@+id/button_admin_logoff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:textColor="#FF6347"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/driver_logout"
        android:background="@drawable/button" />

</LinearLayout>