<?xml version="1.0" encoding="utf-8"?>
<!-- 驾驶员信息展示布局 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- Welcome -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:text="@string/driver_info_welcome"
        android:textSize="25sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="#000000" />

    <!-- 用户名和车牌号 -->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/driver_licence"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_driver_licence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="测试车牌号"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/driver_phone"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_driver_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="测试电话"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="#000000" />

    <!-- 为方便扩展，使用GridView制作Dashboard样式 -->
    <GridView android:id="@+id/gridView_driver_functions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:numColumns="auto_fit"
        android:gravity="center"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"/>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="#000000" />

    <!-- 退出登录按钮 -->
    <Button
        android:id="@+id/button_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/driver_logout"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

</LinearLayout>